--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -6,14 +8,27 @@
 
     user-select: none;
 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'JetBrains Mono', monospace;
 }
 
 html,
 body {
     background-color: #181818;
+    height: 100%;
 }
 
 hr {
     border-color: rgb(139, 139, 139);
+}
+
+hanime-body {
+    display: block;
+
+    height: fit-content;
+    background: url('https://sportshub.cbsistatic.com/i/2022/05/16/3eee5cbd-0e19-48fd-a094-500cfe42c931/spy-x-family-anya-heh-anime.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    padding-top: 62px;
 }
