--- a/Hanime/web/css/web-header.css
+++ b/Hanime/web/css/web-header.css
@@ -8,7 +8,7 @@
 .web__header {
     background-color: #202020;
 
-    position: sticky;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
