--- a/Hanime/web/css/watch.css
+++ b/Hanime/web/css/watch.css
@@ -5,3 +5,12 @@
 .hanime-recommended-videos__video:hover {
     background-color: #ffffff21;
 }
+
+.hanime-rating {
+    display: flex;
+}
+
+.hanime-rating__star {
+    width: 30px;
+    height: 30px;
+}
